# quantpipe

./: .gitignore  .markdownlint.json  .pre-commit-config.yaml  .ruff.toml  CHANGELOG.md  CODE_QUALITY_SUMMARY.md  CONTRIBUTING.md  GEMINI.md  LICENSE  README.md  RELEASES.md  TESTING.md  debug_import.py  error_log.txt  example_config.yaml  impl_prereq.json  plan_setup.json  poetry.toml  prereq.json  prereq_tasks.json  pyproject.toml  pytest.ini  reproduce_issue.py  research-plotting.md  test_cli_imports.py  test_full.txt  test_import.py  test_ingestion_dataclass.py  test_minimal.py  test_minimal_repro.py  test_module_debug.py  test_traceback.txt  test_vectorized_direct.py  verify_model.py
.agent/workflows/: secrets.yml  tests.yml
.github/: CODEOWNERS  copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: quality.yml  security.yml  tests.yml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md
backend/: __init__.py  api.py  models.py  run_quantpipe.py
backend/routers/: __init__.py  backtest.py  config.py  datasets.py  results.py  strategies.py
docker/: api.Dockerfile  docker-compose.yml
docs/: ARCHITECTURAL_REFACTOR.md  backtest_config.yaml.example  backtesting.md  future-strategies-research.md  performance.md  strategies.md  strategy_authoring.md  structure.md  timeframes.md  visualization.md
docs/devlogs/: 2026-02-01-initial-refactor.md
examples/: long_signal_walkthrough.ipynb
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: Nav.tsx
hooks/transforms/: github.js
notes/issues/: issue-web-dashboard.md
private_strategies/: README.md  __init__.py  test_strat.py
quantpipe-ui/: Dockerfile  package.json
quantpipe-ui/app/: globals.css  layout.tsx  page.tsx
quantpipe-ui/components/: sidebar.tsx
quantpipe-ui/hooks/: useBacktest.ts
quantpipe_api/: __init__.py  engine_wrapper.py  main.py  models.py  requirements.txt
results/: backtest_long_20251030_011053.txt  backtest_long_20251030_011254.txt  backtest_long_20251030_011402.txt  backtest_long_20251030_011451.txt  backtest_long_20251030_011721.txt
scripts/: convert_mt_format.py  test_vectorized_scan.py
scripts/ci/: __init__.py  aggregate_benchmarks.py  check_dependencies.py  check_logging_and_docs.py  check_logging_format.py  check_no_row_loops.py  check_quality.py  compare_baseline_optimized.py  profile_scan_allocations.py  record_stretch_runtime.py
specs/001-trend-pullback/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-directional-backtesting/: BASELINE_TEST_FAILURES.md  analysis-report.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-update-001-tests/: PHASE3_SUMMARY.md  analysis-report.md  commit-draft.txt  data-model.md  fixture-manifest.md  glossary.md  mapping.md  plan.md  quickstart.md  removal-notes.md  research.md  spec.md  tasks.md
specs/004-timeseries-dataset/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-docs-restructure/: spec.md
specs/006-multi-strategy/: analysis-report.md  commit-draft.txt  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/007-performance-optimization/: PHASE7_COMPLETION_SUMMARY.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/008-multi-symbol/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/009-optimize-ingestion/: ARCHITECTURAL_IMPROVEMENTS.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/010-scan-sim-perf/: data-model.md  phase6-completion-summary.json  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/011-optimize-batch-simulation/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/012-cleanup-tests/: plan.md  research.md  spec.md  tasks.md
specs/013-multi-symbol-backtest/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/014-interactive-viz/: analysis_report.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md  (+1 more)
src/: __init__.py
tests/: FR_MAPPING.md  __init__.py  _inventory_removed.txt  conftest.py  removal-notes.md
(+577 files in other folders)
