[tool.poetry]
name = "trading-strategies"
version = "0.1.0"
description = "Algorithmic FX trading strategies with backtesting framework"
authors = ["Trading Strategies Team"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.0.0"
pandas = "^2.2.0"
pydantic = "^2.4.0"
rich = "^13.6.0"
jsonschema = "^4.25.1"
polars = "^1.17.0"
pyarrow = "^18.0.0"
psutil = "^6.1.0"

# Optional performance dependencies (install manually if needed):
# numba = "^0.58.0"  # JIT compilation for trade simulation speedup (10-50x gains)
tqdm = "^4.67.1"
py-spy = "^0.4.1"
joblib = "^1.5.2"
lightweight-charts = "^2.0.0"

# Datashader visualization stack (for large dataset backtest analysis)
holoviews = "^1.19.0"
hvplot = "^0.10.0"
datashader = "^0.16.0"
panel = "^1.4.0"
bokeh = "^3.4.0"
dask = "^2024.1.0"  # Pin to 2024.x for Datashader compatibility (2025.x has breaking changes)

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-benchmark = "^4.0.0"
hypothesis = "^6.88.0"
ruff = "^0.1.0"
black = "^23.10.0"
pylint = "^3.0.0"
mypy = "^1.7.0"
ipykernel = "^7.1.0"
pyyaml = "^6.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']
skip-string-normalization = false
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | \.tox
  | build
  | dist
  | __pycache__
)/
'''

[tool.ruff]
line-length = 88
target-version = "py311"
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "SIM",   # flake8-simplify
    "PERF",  # perflint (performance anti-patterns)
    "PD",    # pandas-vet (pandas best practices)
]
ignore = [
    "E501",  # line too long (handled by black)
]
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
]

[tool.ruff.per-file-ignores]
"tests/**/*.py" = ["S101"]  # Allow assert in tests
# iterator_mode.py intentionally uses .iterrows() for row-by-row iteration pattern
"src/io/iterator_mode.py" = ["PD010"]  # Allow .iterrows() in iterator mode

[tool.pylint.main]
fail-under = 8.0
ignore = [".venv", "__pycache__", "build", "dist"]
jobs = 0  # Auto-detect CPU cores
recursive = true
suggestion-mode = true

[tool.pylint.format]
max-line-length = 88

[tool.pylint.messages_control]
disable = [
    "C0111",  # missing-docstring (we use ruff for this)
    "C0103",  # invalid-name (too strict for math variables)
    "R0913",  # too-many-arguments (common in configs)
    "R0914",  # too-many-locals (common in algos)
    "W0212",  # protected-access (needed for testing)
    "C0415",  # import-outside-toplevel (sometimes needed)
]

[tool.pylint.design]
max-args = 10
max-attributes = 15
max-branches = 15
max-locals = 20
max-returns = 6
max-statements = 60

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Gradually enable
ignore_missing_imports = true
strict_optional = true
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
markers = [
    "local_data: marks tests requiring local gitignored data files (skipped in CI)",
]
